app/globals.css
/* ... */
@layer components {
  .btn-continue {
    position: relative;
    transition: all 0.2s ease;
    border-radius: 1000px;

    &::after,
    &::before {
      content: '';
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      height: 115%;
      width: 106%;
      background-image: linear-gradient(
        to bottom right,
        #8b75fe 10%,
        #5bddfd,
        #1f58fd
      );
      background-size: 300% 300%;
      z-index: -1;
      border-radius: inherit;
      animation: BackgroundMove 3s ease infinite;
      transition: all 0.1s ease;
    }

    &::before {
      filter: blur(1.5rem);
      opacity: 0.8;
    }

    &:hover {
      z-index: 1;
    }

    &.no-hover:hover {
      z-index: auto;
    }
  }

  @keyframes BackgroundMove {
    0% {
      background-position: 0% 50%;
    }

    50% {
      background-position: 100% 50%;
    }

    100% {
      background-position: 0% 50%;
    }
  }

  .carousel {
    overflow-x: auto;
    display: flex;
    gap: 1.25rem;
    scrollbar-width: 0;
    position: relative;
  }

  .carousel_group {
    display: flex;
    animation: moveCarousel 1s infinite linear;
  }

  .pretty-scrollbar {
    &::-webkit-scrollbar {
      @apply w-[0.2rem] md:w-[0.4rem];
      border-radius: 5px;
    }

    &::-webkit-scrollbar-track {
      border-radius: 5px;
      background-color: rgba(116, 114, 114, 0.911);
    }

    &::-webkit-scrollbar-thumb {
      width: 2rem;
      border-radius: 5px;
      background-color: var(--color-primary-dark-bg);
    }
  }
}

@layer utilities {
  .hide-scrollbar::-webkit-scrollbar {
    display: none;
  }

  .animate-dotBounce {
    animation: animateDot 0.6s infinite alternate;
  }

  @keyframes animateDot {
    0% {
      transform: translateY(0);
    }

    100% {
      transform: translateY(-5px);
    }
  }

  .animate-slideHide {
    animation: slideHide 0.35s ease forwards;
  }

  @keyframes slideHide {
    0% {
      left: 0%;
    }

    100% {
      left: -100%;
    }
  }

  .animate-slideShow {
    animation: slideShow 0.35s ease forwards;
  }

  @keyframes slideShow {
    0% {
      left: -100%;
    }

    100% {
      left: 0%;
    }
  }
}
/* ... */

